# dipt-ict_tech-shop

./: README.md  pyproject.toml
app/: requirements.txt
app/carts/: cart.py  urls.py  views.py
app/cf/: settings.py  urls.py
app/orders/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
app/orders/migrations/: 0001_initial.py  0002_order_oid.py  0003_alter_order_oid.py
app/products/: models.py  urls.py  views.py
app/products/migrations/: 0001_initial.py  0002_rename_products_product_alter_product_options.py
app/static/css/: styles.css
app/static/js/: main.js
app/templates/: base.html  navbar.html
app/templates/carts/: cart_detail.html
app/templates/orders/order/: create.html  created.html
app/templates/products/: product_confirm_delete.html  product_detail.html  product_list.html
